@@ -1,6 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.6:
 *03/09/29:
+  * Fix aterm not updating on opaque move (Thanks Mathias Gumz)
+    Window.cc
   * Fix resize calculations, particularly wrt base_width/height (Simon)
     - fixes abiword resize issues
     Window.hh/cc WinClient.hh/cc
